# SoOSiM

./: LICENSE  README.md  SoOSiM.cabal  TODO.md
c-interfaces/: CodeAdapter.h  DeploymentManager.h  MemoryManager.h  ProcessManager.h  ResourceDiscovery.h  SoOSiM.h  common.h
examples/: ExampleConfig.hs  Fibbo.hs  HeatMap.hs  MemoryManager.hs  ResourceDiscovery.hs  Scheduler.hs
examples/Expr/: Combinators.hs  SimpleSemantics.hs  SoOSSemantics.hs  Syntax.hs
examples/HeatMap/: Application.hs  Types.hs  Util.hs
examples/MemoryManager/: Types.hs  Util.hs
examples/ResourceDiscovery/: Types.hs
examples/Scheduler/: Types.hs
examples/Twente/: Code.hs  CodeAdapter.hs  CodeDeployer.hs  Node.hs  Scheduler.hs
examples/Twente/ResourceDiscovery/: Utils.hs
src/: SoOSiM.hs
src-components/SoOSiM/Components/: ApplicationHandler.hs  CodeAdapter.hs  Components.pptx  DeploymentManager.hs  MemoryManager.hs  ProcessManager.hs  ResourceDiscovery.hs  Scheduler.hs  Types.hs  Utils.hs
src-components/SoOSiM/Components/MemoryManager/: Interface.hs
src/SoOSiM/: CoroutineT.hs  SimMonad.hs  Simulator.hs  Types.hs  Util.hs
src/SoOSiM/Simulator/: Util.hs
