Name:                SoOSiM
Version:             0.1
Synopsis:            Abstract full system simulator
-- Description:
Homepage:            http://www.soos-project.eu/
License:             BSD3
License-file:        LICENSE
Author:              S(o)OS Consortium
Maintainer:          christiaan.baaij@gmail.com
-- Copyright:
Category:            Hardware
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >=1.2


Library
  HS-Source-Dirs:   src

  Exposed-modules:  SoOSiM

  ghc-options:      -Wall

  Build-depends:    base             >= 4.3.1.0 && < 4.5,
                    containers       >= 0.4.0.0 && < 0.5,
                    transformers     >= 0.2.2.0 && < 2.3,
                    mtl              >= 2.0.1.0 && < 2.1

  Other-modules:    SoOSiM.CoroutineT,
                    SoOSiM.SimMonad,
                    SoOSiM.Simulator,
                    SoOSiM.Types,
                    SoOSiM.Util

  -- Build-tools:

